# rust-dno-crawler

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dioxus.toml  LICENSE  LICENSE.md  Makefile  PROJECT_STATUS.md  README.md  docker-compose.yml  init.sql  mock_dnos.json  package.json  tailwind.config.js  tailwind_input.css
api/: Cargo.toml
api/src/: database.rs  handlers.rs  lib.rs  main.rs  middleware.rs  models.rs  routes.rs  tests.rs
app/: Cargo.toml
app/src/: main.rs
auth/: Cargo.toml
auth/src/: backend.rs  jwt.rs  lib.rs  password.rs  tests.rs
config/: template_data_store.json
core/: Cargo.toml
core/src/: auth.rs  database.rs  errors.rs  lib.rs  models.rs  password.rs  tests.rs  utils.rs
core/src/auth/: auth_session.rs  axum_server.rs  server_functions.rs
crates/api/: CLAUDE.md  Cargo.toml
crates/api/src/: database.rs  lib.rs  main.rs  middleware.rs  routes.rs
crates/api/src/handlers/: admin.rs  auth.rs  crawl.rs  dno.rs  dnos.rs  intelligent.rs  mod.rs  orchestrator.rs  patterns.rs  reverse_crawl.rs  search.rs  sources.rs
crates/api/src/routes/: account.rs  admin.rs  auth.rs  dashboard.rs  files.rs  health.rs  metrics.rs  query.rs  search.rs  websocket.rs
crates/api/src/services/: admin.rs  ai.rs  crawl.rs  data_source.rs  master_orchestrator.rs  mod.rs  orchestrator.rs  pattern.rs  patterns.rs  pdf.rs  reverse_crawl.rs  search.rs  source.rs
crates/core/: CLAUDE.md  Cargo.toml
crates/core/src/: config.rs  database.rs  error.rs  lib.rs  models.rs
crates/core/src/cache/: metrics.rs  mod.rs  redis_cache.rs
crates/core/src/repository/: dno_repository.rs  mod.rs  search_repository.rs  user_repository.rs
crates/crawler/: CLAUDE.md  Cargo.toml  ClaudeOpus4-ChatHistory-PDF-DataExtractionAiProject
crates/crawler/src/: adaptive_crawler.rs  cli.rs  crawler.rs  crawler_orchestrator.rs  extractors.rs  learning_engine.rs  main.rs  master_orchestrator.rs  reverse_crawler.rs  reverse_crawler_test.rs  source_manager.rs  sources.rs
crates/frontend/: Cargo.toml
crates/frontend/src/: hooks.rs  lib.rs  pages.rs  services.rs
crates/frontend/src/components/: crawl.rs  dnos.rs  home.rs  layout.rs  mod.rs  search.rs  settings.rs
crates/shared/: Cargo.toml
crates/shared/src/: config.rs  error.rs  lib.rs  models.rs
crates/website/: CLAUDE.md  Cargo.toml
crates/website/src/: components.rs  lib.rs  pages.rs  services.rs  utils.rs
crawler/: Cargo.toml
crawler/src/: lib.rs  main.rs
docs/: ADMIN_API_UPDATES.md  DEPLOYMENT_PLAN.md  IMPLEMENTATION_PLAN.md  PROJECT_PLAN.md  PROJECT_STATUS.md  REDIS_SETUP.md  deployment-plan-enhanced.md  redis-cache-implementation.md
migrations/: 001_initial_schema.sql  002_dno_data_schema.sql  003_enhanced_crawler_intelligence.sql
old_database_exports/: crawl.csv  data_source_yearly.csv  hlzf_data.csv  metadata.csv  netzentgelte_data.csv  sqlite_master.csv  users.csv
public/: tailwind_output.css
scripts/: Cargo.toml  import_csv_data.rs
src/: config.rs  crawler.rs  data_store.rs  database.rs  lib.rs  main.rs  ollama_client.rs  web_search.rs  website.rs
src/api/: Cargo.toml  handlers.rs  middleware.rs  mod.rs  routes.rs  tests.rs
src/api/src/: lib.rs
src/auth/: Cargo.toml  backend.rs  jwt.rs  mod.rs  password.rs  session.rs  tests.rs
src/auth/src/: lib.rs
src/core/: Cargo.toml  database.rs  errors.rs  mod.rs  models.rs  tests.rs  utils.rs
src/core/src/: crawler.rs  lib.rs  ollama_client.rs
src/crawler/: crawler.rs  mod.rs  web_search.rs
src/routes/: admin.rs  error_404.rs  index.rs  login.rs  register.rs
src/tests/: integration_tests.rs
src/website/: Cargo.toml  app.rs  handlers.rs  layout.rs  mod.rs  package-lock.json  package.json  routes.rs  tailwind_input.css  theme.rs
src/website/assets/: tailwind.css
src/website/components/: footer.rs  header.rs
src/website/routes/: contact.rs  dashboard.rs  error_404.rs  impressum.rs  login.rs  mod.rs  privacy.rs  register.rs  terms.rs  user_management.rs
src/website/src/: app.rs  lib.rs  router.rs
src/website/src/backend/: auth_session.rs  axum_server.rs  mod.rs  router.rs
src/website/src/components/: home.rs  login.rs  register.rs  user.rs
website/: Cargo.toml  Dioxus.toml  package.json  tailwind.config.js  tailwind_input.css
website/public/: tailwind_output.css  tailwind_output_debug.css
website/src/: handlers.rs  layout.rs  lib.rs  main.rs  mod.rs  router.rs
website/src/backend/: axum_server.rs  db.rs  model.rs  router.rs  session.rs
website/src/components/: footer.rs  header.rs  mod.rs
website/src/components/ui/: accessibility.rs  animations.rs  badge.rs  button.rs  card.rs  contrast_analyzer.rs  design_tokens.rs  docs.rs  input.rs  mod.rs  modal.rs  testing.rs  theme.rs
website/src/router/: home.rs  login.rs  register.rs  user.rs
website/src/routes/: contact.rs  dashboard.rs  demo.rs  error_404.rs  home.rs  login.rs  mod.rs  register.rs  terms.rs  user_management.rs
