[package]
name = "rust-dno-crawler"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.97" }
serde_json = { version = "1.0.140" }
tokio = { version = "1.45.0", features = ["full"] }
reqwest = { version = "0.12.15", features = ["json"] }
scraper = { version = "0.23.1" }
serde = { version = "1.0.219", features = ["derive"] }
spider = { version = "2.37.52", default-features = false }

dioxus = { version = "0.6.3" , features = ["router"]}
dioxus-ssr = { version = "0.6.2" }

sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio-native-tls", "macros", "chrono", "uuid"] }

# New auth dependencies
axum-login = { version = "0.15.3" }
axum = { version = "0.7.9" }

# Password hashing - using the recommended argon2 approach
argon2 = { version = "0.5.3" }

async-trait = { version = "0.1.87" }

tower = "0.5"
tower-http = { version = "0.5.2", features = ["cors", "fs"] }
jsonwebtoken = "9.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0.69"
regex = "1.0"

tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false
