[workspace]
resolver = "2"
members = [
    "crates/shared",
    "crates/api", 
    "crates/crawler",
    "crates/frontend"
]

[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["KyleDerZweite"]
license = "Apache-2.0"
repository = "https://github.com/KyleDerZweite/rust-dno-crawler"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Authentication
jsonwebtoken = "9.0"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Frontend
dioxus = "0.6.3"
dioxus-web = "0.6.3"
dioxus-router = "0.6.3"

# HTML parsing and web crawling
scraper = "0.18"
url = "2.5"
regex = "1.10"
async-trait = "0.1"

# Cryptography and encoding
sha2 = "0.10"
base64 = "0.22"

# Testing utilities
tempfile = "3.8"

# Async utilities
futures = "0.3"

# AI and ML
rand = "0.8"

# Shared types
shared = { path = "crates/shared" }
