[workspace]
resolver = "2"
members = [
    "crates/api",
    "crates/crawler",
    "crates/website",
    "crates/core"
]

[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["KyleDerZweite"]
license = "Apache-2.0"
repository = "https://github.com/KyleDerZweite/rust-dno-crawler"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.45.1", features = ["full"] }
tokio-util = "0.7"

# Web framework
axum = "0.8.4"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "fs"] }

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "sqlite", "uuid", "chrono", "rust_decimal"] }

# Redis caching
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
bb8 = "0.8"
bb8-redis = "0.15"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.12.20", features = ["json"] }

# Authentication
jsonwebtoken = "9.3.1"

# CLI
clap = { version = "4.5.40", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Frontend
dioxus = "0.6.3"
dioxus-web = "0.6.3"
dioxus-router = "0.6.3"

# HTML parsing and web crawling
scraper = "0.23.1"
url = "2.5.4"
regex = "1.11.1"
async-trait = "0.1"

# Cryptography and encoding
sha2 = "0.10"
base64 = "0.22"

# Testing utilities
tempfile = "3.20.0"

# Async utilities
futures = "0.3.31"

# Decimal arithmetic
rust_decimal = { version = "1.36", features = ["serde", "db-postgres"] }

# AI and ML
rand = "0.9.1"

# Shared types
core = { path = "crates/core" }
crawler = { path = "crates/crawler" }