[package]
name = "api"
version = "0.0.1"
edition = "2024"

[dependencies]
core = { workspace = true }

anyhow = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "full"] }

sqlx = { workspace = true, features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
axum_session = { workspace = true }
axum_session_auth = { workspace = true }
axum = { workspace = true, features = ["tokio", "json"] }
bcrypt = { workspace = true }
async-trait = { workspace = true }

# Additional dependencies needed for JWT and the API
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
jsonwebtoken = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4", "serde"] }
thiserror = { workspace = true }
regex = { workspace = true }