[package]
name = "api"
edition = "2021"
version.workspace = true

[[bin]]
name = "api-server"
path = "src/main.rs"

[dependencies]
core = { path = "../core" }
auth = { path = "../auth" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenv = { workspace = true }
