[package]
name = "auth"
edition = "2021"
version.workspace = true

[dependencies]
core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
axum-login = { workspace = true }
axum = { workspace = true }
async-trait = { workspace = true }
jsonwebtoken = { workspace = true }
tokio = { workspace = true }
argon2 = { workspace = true }
