[package]
name = "core"
edition = "2021"
version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
axum = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
argon2 = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
dotenv = { workspace = true }
jsonwebtoken = { workspace = true }

# Note: Core is now a library-only crate providing shared functionality
