[package]
name = "crawler"
edition = "2021"
version.workspace = true

[[bin]]
name = "dno-crawler"
path = "src/main.rs"

[dependencies]
core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
scraper = { workspace = true }
spider = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
