[package]
name = "website"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "website-server"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
dioxus = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
web-sys = { workspace = true }

# Optional dependencies for full app integration
tokio = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
axum-login = { workspace = true, optional = true }
dioxus-ssr = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
dotenv = { workspace = true, optional = true }

[features]
default = []
server = ["tokio", "axum", "axum-login", "dioxus-ssr", "tower", "tower-http", "uuid", "tracing", "tracing-subscriber", "dotenv"]
