[package]
name = "api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Shared types
shared.workspace = true

# Async runtime
tokio.workspace = true

# Web framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Database
sqlx.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Authentication
jsonwebtoken.workspace = true

# HTTP client
reqwest.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Date/Time
chrono.workspace = true

# UUID
uuid.workspace = true
