[package]
name = "core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
thiserror.workspace = true
sqlx.workspace = true
reqwest.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
rust_decimal.workspace = true