[package]
name = "crawler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Shared types
core.workspace = true

# Async runtime
tokio.workspace = true

# HTTP client
reqwest.workspace = true

# CLI
clap.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Date/Time
chrono.workspace = true

# UUID
uuid.workspace = true

# HTML parsing
scraper.workspace = true
url.workspace = true
regex.workspace = true
async-trait.workspace = true

# Additional dependencies
futures.workspace = true

# AI and ML
rand.workspace = true
