[package]
name = "website"
version = "0.0.1"
edition = "2024"

[dependencies]
dioxus = { workspace = true, features = ["router", "fullstack"] }
anyhow = { workspace = true, optional = true }
tokio = { workspace = true, optional = true, features = ["rt", "rt-multi-thread", "macros", "full"] }

sqlx = { workspace = true, features = ["sqlite", "runtime-tokio", "tls-native-tls"], optional = true }
axum_session = { workspace = true, features = ["sqlite-rustls"], optional = true }
axum_session_auth = { workspace = true, features = ["sqlite-rustls"], optional = true }
axum = { workspace = true, optional = true }

bcrypt = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }

[features]
default = []
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "dep:tokio", "sqlx", "axum_session", "axum_session_auth", "axum", "bcrypt", "async-trait", "anyhow"]
